# takumi

./: pyproject.toml
src/core/config/: __init__.py
src/takumi/: __init__.py  app.py  application.py  application_dev.py  auth.py  cache.py  campaign_stats.py  campaigns.py  error_codes.py  exceptions.py  i18n.py  rate_limiter.py  receipts.py  reporting.py  security.py  sentiment.py  signers.py  tokens.py  vsapi.py
src/takumi/alembic/: utils.py
src/takumi/config/: __init__.py
src/takumi/events/: __init__.py  audience_insight.py  campaign.py  device.py  facebook_account.py  facebook_page.py  gig.py  influencer.py  insight.py  instagram_account.py  instagram_post.py  instagram_story.py  offer.py  payment_authorization.py  post.py  targeting.py  tiktok_account.py  user.py
src/takumi/finance/: report.py
src/takumi/funds/: __init__.py  assets.py  cash.py  engagement.py  fund.py  impressions.py  reach.py
src/takumi/gql/: README.md  __init__.py  arguments.py  constants.py  converters.py  db.py  exceptions.py  fields.py  generator.py  middlewares.py  relay.py  resolver.py  schema.py  utils.py
src/takumi/models/: __init__.py  address.py  advertiser.py  advertiser_industry.py  announcement.py  answer.py  api_task.py  audience_insight.py  audit.py  campaign.py  children_targeting.py  comment.py  config.py  currency.py  device.py  email_leads.py  email_login.py  facebook_account.py  facebook_ad.py  facebook_page.py  gig.py  helpers.py  influencer.py  influencer_campaign_mixin.py  influencer_information.py  influencer_prospect.py  influencer_targeting_mixin.py  insight.py  instagram_account.py  instagram_audience_insight.py  instagram_post.py  instagram_post_comment.py  instagram_post_insight.py  instagram_reel.py  instagram_story.py  instagram_story_frame_insight.py  interest.py  many_to_many.py  market.py  media.py  (+18 more)
src/takumi/notifications/: __init__.py  client.py  exceptions.py
src/takumi/reports/: __init__.py  campaign.py  post.py
src/takumi/roles/: __init__.py  needs.py  permissions.py  roles.py
(+531 files in other folders)
