[tool.poetry]
name = "takumi-server"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.8"
aiohttp = "~3.8.1"
alembic = "~1.7.5"
alembic-verify = "~0.1.4"
Babel = "~2.9.1"
boto3 = "^1.15.0"
botocore = "^1.18.0"
cryptography = "~36.0.1"
datadog = "~0.44.0"
dwollav2 = "~2.2.1"
elasticsearch = "^6.1.1"
elasticsearch-dsl = "^6.1.0"
emoji = "^1.6.3"
exponent-server-sdk = "~2.0.0"
# https://github.com/mobolic/facebook-sdk/issues/498
facebook_business = "~3.2.12"
Flask = "*"
Flask-BabelEx = "~0.9.3"
flask-cors = "~3.0.0"
Flask-GraphQL = "~1.4.0"
Flask-Limiter = "~2.0.1"
Flask-Login = "~0.5.0"
Flask-Migrate = "~3.1.0"
Flask-Principal = "~0.4.0"
flask-shell-ipython = "^0.4.1"
Flask-SQLAlchemy = "~2.4.0"
Flask-SSLify = "~0.1.0"
geoip2 = "~4.5.0"
graphene = "~2.1.0"
graphene-sqlalchemy = "~2.3.0"
graphql-core = "~2.3.2"
graphql-relay = "~0.4.5"
instagram-text-python = "~2.1.0"
ipython = "*"
iso8601 = "~1.0.2"
itsdangerous = "~1.1.0"
marshmallow = "^2.21.0"
money = "~1.3.0"
Pillow = "^9.1.1"
psycopg2 = "~2.9.3"
PyJWT = "~1.7.0"
redis = "^3.5.0"
regex = "^2022.1.18"
requests = "*"
SQLAlchemy = "~1.3.8"
SQLAlchemy-Searchable = "~0.10.0"
SQLAlchemy-Utc = "~0.14.0"
SQLAlchemy-Utils = "~0.38.2"
tasktiger = "~0.16"
typing_extensions = "^4.0.1"
urllib3 = "^1.26.5"
Werkzeug = "~1.0.1"
workalendar = "~16.2.0"
sentry-sdk = {extras = ["flask"], version = "*"}
python-dotenv = "^0.20.0"
uWSGI = "^2.0.20"
Jinja2 = "~3.0.3"

[tool.poetry.dev-dependencies]
black = "*"
blinker = "*"
click = "*"
codecov = "*"
flake8 = "*"
Flask-Script = "*"
freezegun = "*"
httmock = "*"
ipdb = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-flask = "*"
pytest-pycodestyle = "*"
sqlalchemy-stubs = "*"
pdbpp = "*"
flake8-isort = "*"
flake8-annotations = "*"

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
